--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -27,7 +27,7 @@
 				{% endfor %}
 			{% endif %}
 			{% if site.data.settings.CTAs.first_CTA_URL != 'contact' and site.data.settings.CTAs.second_CTA_URL != 'contact' %}
-		<li><a href="/contact" id="contact">Contact</a></li>
+		<li><a href="/contact" id="contact">Contact Me</a></li>
 		{% endif %}
 
 		</ul>
