--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -7,7 +7,7 @@
 	overflow: hidden
 
 .navbar-andross .navbar-brand
-	color: $brand
+	color: #0a55a1
 	padding-top: 20px
 	padding-bottom: 33px
 	font-size: 20px
@@ -20,7 +20,7 @@
 	@include transition
 
 .navbar-left>li>a
-	background: transparent
+	background: #0a55a1
 	color: black
 	// padding: 1.3rem 2rem
 	text-transform: capitalize
