--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -2,9 +2,10 @@
 	border-bottom: 2px solid $theme
 	border-radius: 0
 	min-height: 52px
-	background: #ffffff
+	background: #0a55a1
 	width: 100%
 	overflow: hidden
+	color: #0a55a1
 
 .navbar-andross .navbar-brand
 	color: #0a55a1
@@ -20,7 +21,7 @@
 	@include transition
 
 .navbar-left>li>a
-	background: #0a55a1
+	background: #ffffff
 	color: black
 	// padding: 1.3rem 2rem
 	text-transform: capitalize
