Updated '_sass/_navigation.sass' via CloudCannon

--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -21,7 +21,7 @@
 	@include transition
 
 .navbar-left>li>a
-	background: #ffffff
+	background: transparent
 	color: black
 	// padding: 1.3rem 2rem
 	text-transform: capitalize
@@ -52,7 +52,7 @@
 	font-size: 2rem
 	font-weight: 300
 	&:hover
-		background: #eeeeee
+		background: #ffffff
 		color: $brand-dark
 	&:active
 		text-decoration: none
