Updated '_sass/_navigation.sass' via CloudCannon

--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -2,13 +2,13 @@
 	border-bottom: 2px solid $theme
 	border-radius: 0
 	min-height: 52px
-	background: #0a55a1
+	background: #0741a3
 	width: 100%
 	overflow: hidden
 	color: #0a55a1
 
 .navbar-andross .navbar-brand
-	color: #0a55a1
+	color: #ffffff
 	padding-top: 20px
 	padding-bottom: 33px
 	font-size: 20px
