Updated '_sass/_navigation.sass' via CloudCannon

--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -5,7 +5,7 @@
 	background: #0741a3
 	width: 100%
 	overflow: hidden
-	color: #0a55a1
+	color: #ffffff
 
 .navbar-andross .navbar-brand
 	color: #ffffff
