--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -22,7 +22,7 @@
 
 .navbar-left>li>a
 	background: transparent
-	color: black
+	color: white
 	// padding: 1.3rem 2rem
 	text-transform: capitalize
 	font-size: 2rem
